# rdm4001

./: .gitignore  README.md  console.cpp  console.hpp  event.cpp  event.hpp  fun.cpp  fun.hpp  game.cpp  game.hpp  http.cpp  http.hpp  input.cpp  input.hpp  localization.cpp  localization.hpp  meson.build  meson.options  object.cpp  object.hpp  object_property.cpp  object_property.hpp  physics.cpp  physics.hpp  profiler.cpp  profiler.hpp  resource.cpp  resource.hpp  resource_model.cpp  resource_texture.cpp  scheduler.cpp  scheduler.hpp  sdl_window.cpp  sdl_window.hpp  security.cpp  security.hpp  settings.cpp  settings.hpp  shell.nix  signal.cpp  (+10 more)
data/dat1/: post.fs.glsl
data/dat3/: root.xml
data/dat5/gui/: main_menu.xml
data/engine/assets/: error.glb
data/engine/gui/: root.xml
data/engine/lc/: en.csv  fr.csv
data/engine/materials/: deferred_post.fs.glsl  materials.json  mesh.fs.glsl  mesh.vs.glsl  mesh_skinned.vs.glsl  post.fs.glsl
data/engine/materials/gui/: image.fs.glsl  panel.fs.glsl
data/luapg/: example.pak  injection.pak  modlist.json
gfx/: apis.cpp  apis.hpp  base_context.cpp  base_context.hpp  base_device.cpp  base_device.hpp  base_types.hpp  camera.cpp  camera.hpp  engine.cpp  engine.hpp  gl_context.cpp  gl_context.hpp  gl_device.cpp  gl_device.hpp  gl_types.cpp  gl_types.hpp  lighting.cpp  lighting.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  postprocessing.cpp  postprocessing.hpp  rendercommand.cpp  rendercommand.hpp  renderpass.hpp  video.cpp  video.hpp  viewport.cpp  viewport.hpp  vk_context.cpp  vk_context.hpp  vk_device.cpp  vk_device.hpp  vk_types.cpp  vk_types.hpp
gfx/gui/: font.cpp  font.hpp  gui.cpp  ngui.cpp  ngui.hpp  ngui_elements.cpp  ngui_elements.hpp  ngui_window.cpp  ngui_window.hpp
luapg/: luapg.cpp  luapg.hpp
network/: authentication.cpp  authentication.hpp  bitstream.cpp  bitstream.hpp  entity.cpp  entity.hpp  network.cpp  network.hpp  network_defs.hpp  player.cpp  player.hpp
putil/: fpscontroller.cpp  fpscontroller.hpp
raymarcher/: main.cpp  rgame.cpp
roadtrip/: america.cpp  roadtrip.cpp
script/: script.cpp  script.hpp  script_api.cpp  script_api.hpp  script_context.cpp  script_context.hpp
subprojects/common/: filesystem.cpp  filesystem.hpp  logging.cpp  logging.hpp  meson.build  pak_file.cpp  pak_file.hpp  pak_file_creator.cpp
subprojects/glad/: meson.build
subprojects/glad/include/glad/: egl.h  gl.h
subprojects/glad/src/: gl.c
subprojects/shadercompiler/: meson.build  shadercompiler.cpp
test/: main.cpp  render.cpp  testgame.cpp  testgame.hpp  testsystem.cpp  testsystem.hpp
